# the-online-atlas

./: .eslintrc.cjs  .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
rust-lib/: .eslintrc.cjs  Cargo.toml  README.md  build-script  package.json
rust-lib/src/: lib.rs
src/: env.ts  home.tsx  lib.rs  map.ts  state.ts  worker-pool.ts
src/map/: const.ts  controls.ts  draw-lines.ts  draw-polygons.ts  draw-tile.ts  entry.ts  get-tiles-in-view.ts  line.wgsl  store.ts  types.ts  util.ts  webgpu.ts
src/math/: Mat4.ts  Quaternion.ts  Vec2.ts  Vec3.ts
src/routes/: entry.tsx  page.tsx
src/workers/: fetch-tile.ts  linestrings-to-mesh.ts  polygons-to-mesh.ts  reducer.ts  tsconfig.json
web/: .env.development  .eslintrc.cjs  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
web/src/: env.ts  worker-pool.ts
web/src/map/: Camera.ts  Geometry.ts  MapTile.ts  Object3D.ts  RenderPipeline.ts  Renderable.ts  const.ts  controls.ts  draw-lines.ts  draw-tile.ts  draw-triangle.ts  entry.ts  get-tiles-in-view.ts  polygon.wgsl  store.ts  test.ts  types.ts  util.ts  webgpu.ts  window.ts
web/src/map/entities/: Camera.ts  CubeGeometry.ts  FlatMaterial.ts  Geometry.ts  GlobeViewControls.ts  GraphNode.ts  Group.ts  LineGeometry.ts  (+6 more)
web/src/math/: Mat4.ts  Quaternion.ts  Vec2.ts  Vec3.ts
web/src/routes/: entry.tsx
web/src/utils/: index.ts  math-utils.ts  webgpu-utils.ts  window-utils.ts
web/src/workers/: fetch-tile.ts  linestrings-to-mesh.ts
