[package]
name = "the_online_atlas_rust_lib"
edition = "2021"
rust-version = "1.77.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = ["console"]

[profile.release]
lto = true
opt-level = "s"
